[gd_scene load_steps=10 format=3 uid="uid://dnik38dp1mi14"]

[ext_resource type="Texture2D" uid="uid://d0sevtclmrn4j" path="res://assets/art/props/1p.png" id="1_dybpe"]
[ext_resource type="Script" uid="uid://bmx5sccfdcy1f" path="res://scenes/screens/team_selection/flag_selector.gd" id="1_u0mo3"]
[ext_resource type="Texture2D" uid="uid://b0hy2o8akyj05" path="res://assets/art/ui/flags/flag-selection.png" id="2_k6wrs"]
[ext_resource type="Texture2D" uid="uid://dcioxtcu4mmtf" path="res://assets/art/props/2p.png" id="2_u0mo3"]

[sub_resource type="Animation" id="Animation_mk3kq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Border:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Border:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-2, -2)]
}

[sub_resource type="Animation" id="Animation_gp8cm"]
resource_name = "selected"
length = 0.1
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Border:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 0, 1)]
}

[sub_resource type="Animation" id="Animation_uhsia"]
resource_name = "selecting"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Border:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_u0mo3"]
resource_name = "unavailable"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Border:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(-2, -2), Vector2(-4, -2), Vector2(-2, -2), Vector2(0, -2), Vector2(-2, -2)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_selecting_animation"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jmpry"]
_data = {
&"RESET": SubResource("Animation_mk3kq"),
&"selected": SubResource("Animation_gp8cm"),
&"selecting": SubResource("Animation_uhsia"),
&"unavailable": SubResource("Animation_u0mo3")
}

[node name="FlagSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u0mo3")

[node name="Indicator1P" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = -4.0
offset_top = -18.0
offset_right = 11.0
offset_bottom = -7.0
scale = Vector2(2, 2)
texture = ExtResource("1_dybpe")
stretch_mode = 2

[node name="Indicator2P" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 18.0
offset_top = -18.0
offset_right = 33.0
offset_bottom = -7.0
scale = Vector2(2, 2)
texture = ExtResource("2_u0mo3")
stretch_mode = 2

[node name="Border" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -2.0
offset_top = -2.0
offset_right = 46.0
offset_bottom = 30.0
texture = ExtResource("2_k6wrs")
stretch_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_jmpry")
}
autoplay = "selecting"
